# pysonet

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  prestart.sh  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
src/: routers.py
src/base/: classes.py  permissions.py  serializers.py
src/comments/: models.py
src/feed/: services.py  urls.py  views.py
src/feed/management/commands/: addfake.py
src/followers/: admin.py  models.py  serializers.py  urls.py  views.py
src/followers/migrations/: 0001_initial.py  0002_auto_20201010_2249.py
src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20201003_2017.py
src/wall/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/wall/migrations/: 0001_initial.py  0002_auto_20201010_2239.py
